fit_predictor/mkp_aco/evaluates/run14/2025-01-27_08-27-23/evaluations/problem_eval6853615553205916256_stdout.txt
Traceback (most recent call last):
  File "E:\Projects\CO\reevo-main/problems/mkp_aco/eval.py", line 8, in <module>
    import gpt
  File "E:\Projects\CO\reevo-main\problems\mkp_aco\gpt.py", line 1
    importance of each item by normalizing the item's prize relative to the item's total weight or by combining prize and weight to form a weighted probability.
               ^^
SyntaxError: invalid syntax
